--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
             
             <p style="font-size: 1.1em; color: #667eea; font-weight: bold;">
                 "FaceAndAge represents a paradigm shift in personalized medicine. Finally, we can see beyond chronological age to true biological resilience."
-                <br><small>- Prof. Richardson, Harvurd Medical School</small>
+                <br><small>- Prof. Richardson, Harvürd Medical School</small>
             </p>
             
             <button class="start-btn" onclick="startGame()">Start Using FaceAndAge™</button>
