--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
                     
                     <div style="background: #fff; padding: 15px; border-radius: 10px; margin-top: 30px; border: 1px solid #ddd;">
                         <h4 style="color: #d32f2f;">🚨 Critical Finding:</h4>
-                        <p>FaceAge systematically overestimated the biological age of lower SES patients by ${avgFaceAgeDiffLowSES.toFixed(1)} years on average, while higher SES patients showed an average deviation of only ${avgFaceAgeDiffHighSES.toFixed(1)} years.</p>
+                        <p>FaceAndAge systematically overestimated the biological age of lower SES patients by ${avgFaceAgeDiffLowSES.toFixed(1)} years on average, while higher SES patients showed an average deviation of only ${avgFaceAgeDiffHighSES.toFixed(1)} years.</p>
                         <p><strong>Why?</strong> Facial appearance is heavily influenced by:</p>
                         <ul style="text-align: left; margin: 10px 20px; list-style-type: disc; font-size: 0.9em;">
                             <li>Cumulative sun exposure (outdoor occupations)</li>
